--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "chart.js": "^4.5.1",
     "embla-carousel-react": "8.6.0",
     "minio": "^8.0.6",
-    "next": "15.5.4",
+    "next": "^15.5.7",
     "nodemailer": "^7.0.10",
-    "react": "19.1.0",
+    "react": "^19.1.2",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.2",
     "react-icons": "^5.5.0",
     "react-markdown": "9.0.3",
     "rehype-slug": "^6.0.0",
