--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@vercel/edge-config": "^1.4.3",
     "chart.js": "^4.5.1",
     "embla-carousel-react": "8.6.0",
+    "mdast-util-to-hast": "^13.2.1",
     "minio": "^8.0.6",
     "next": "^15.5.7",
-    "nodemailer": "^7.0.10",
+    "nodemailer": "^7.0.11",
     "react": "^19.1.2",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.2",
     "react-icons": "^5.5.0",
-    "react-markdown": "9.0.3",
+    "react-markdown": "^10",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "4.0.0",
     "rom-patcher-js": "github:marcrobledo/RomPatcher.js#91e522e247f709e894761157ccba3189004d0859",
@@ -38,7 +39,7 @@
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
-    "@types/nodemailer": "^7.0.3",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "discord-api-types": "^0.38.32",
