Change `rom-patcher-js` to not use `patch-package`

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-markdown": "^10",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "4.0.0",
-    "rom-patcher-js": "github:marcrobledo/RomPatcher.js#91e522e247f709e894761157ccba3189004d0859",
+    "rom-patcher-js": "github:Hackdex-App/RomPatcher.js",
     "schema-dts": "^1.1.5",
     "serialize-javascript": "^7.0.0"
   },
